--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Print - About me</title>
+    <title>Document</title>
   </head>
   <body>
     <script>
-      document.write(
-        "<h1>Name - Mildred Obiora<br>Height - 154cm<br>Country - Nigeria <style> h1{width: 60%; color: Brown; margin:50px auto; font-family:sans-serif; text-align: center; border: 5px dotted black; padding: 30px;}</style></h1>"
-      );
+        function Calculator(){
+            let num1 = prompt("Enter first number");
+            let num2 = prompt("Enter second number");
+            let op = prompt("Enter an operator");
+            num1 = parseInt(num1);
+            num2 = parseInt(num2);
+            if(op == "+"){alert(num1 + num2);
+            }
+            else if(op == "-"){alert(num1 - num2);
+            }
+            else if(op == "*"){alert(num1 * num2);
+            }
+            else if(op == "/"){alert(num1/num2);
+            }
+            else{alert("Ogbeni enter a number");
+            }
+        }
+        Calculator();
     </script>
   </body>
 </html>
+
